# ml-model-serving

./: .gitignore  Dockerfile  README.md  flake.nix  inventory.aws_ec2.yml  logger.py  main.py  main.tf  playbook-deploy.yml  playbook-provision.yml  playbook.yml  promote.py  pyproject.toml  terraform.tf  train.py
.github/workflows/: docker-publish.yml
src/ml_model_serving/: main.py  promote.py  train.py
