[project]
name = "ml-model-serving"
version = "0.1.0"
description = "ML model serving with FastAPI and Torch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.2",
    "fastapi>=0.115.0",
    "numpy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
train = "train:main"
promote = "promote:main"

[project.optional-dependencies]
inference = ["torch"]
training = ["torch", "mlflow"]

[tool.uv]
conflicts = [
    [
      { extra = "training" },
      { extra = "inference" },
    ],
]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "inference" },
  { index = "torch-cu128", extra = "training" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
